# vpn

./: .gitignore  README.md
amneziawg-android/: .gitignore  gradle.properties
amneziawg-android/backend/: .dockerignore  Dockerfile  README.md  openapi.yaml  pyproject.toml  schema.sql
amneziawg-android/backend/app/: admin_page.py  database.py  db_models.py  main.py  node_service.py  site_page.py
amneziawg-android/backend/migrations/: 0001_vpn_nodes.sql
amneziawg-android/backend/tests/: test_commercial_logic.py  test_node_service.py
amneziawg-android/backend/xingsui_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
amneziawg-android/docs/: android-build.md  xingsui-commercialization.md
amneziawg-android/tunnel/: build.gradle.kts
amneziawg-android/ui/: build.gradle.kts
deploy/control-plane/: .env.example  Caddyfile  docker-compose.yml
deploy/edge-node/: agent.py  hotfix-awg-h-params.sh  init-edge-node.sh  xingsui-agent.service
scripts/: upload-windows-installer.sh
xingsui-windows/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
xingsui-windows/scripts/: build-windows.ps1
xingsui-windows/src/: App.tsx  index.css
xingsui-windows/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
xingsui-windows/src-tauri/binaries/: PLACEHOLDER.txt
xingsui-windows/src-tauri/capabilities/: default.json
xingsui-windows/src-tauri/resources/: PLACEHOLDER.txt
xingsui-windows/src-tauri/src/: api.rs  awg.rs  commands.rs  core.rs  error.rs  lib.rs  main.rs  models.rs  singbox_config.rs  state.rs  stats.rs  store.rs  sysproxy.rs
xingsui-windows/src/lib/: api.ts  (+2 more)
(+73 files in other folders)
