[project]
name = "xingsui-backend"
version = "0.1.0"
description = "FastAPI backend for Xingsui manual QR payment, promotions, invitations, and admin review."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
