[package]
name = "xingsui-windows"
version = "1.0.9"
description = "星隧 VPN Windows 客户端"
authors = ["Xingsui"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "xingsui_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
thiserror = "2"
anyhow = "1"
base64 = "0.22"
parking_lot = "0.12"
futures-util = "0.3"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_Networking_WinInet",
] }
winreg = "0.52"

[features]
custom-protocol = ["tauri/custom-protocol"]
